fix book anotation in invoiceItem